2005-08-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Added an implementation of error function erf(z) for complex
	argument z. This code is based on one unofficial octave function
	by John Smith <john (at) arrows (dot) demon (dot) co (dot) uk>.

2005-08-18  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* Fixed bug for Vec<>::operator(const int, const int) changing
	input parameters.

2005-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Fixed reopened bug [1094934]. Now endianity of x86_64
	platforms can be successfully detected.

2005-08-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Fixed bug [1251878]. `min' and `max' functions did not return
	indexes properly due to the lack of reference in functions'
	arguments.

2005-07-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Fixed bug [1084246]. Operators and other functions in Vec, Mat
	and Array revised to follow standard C++ conventions. Now
	operators provide an lvalue and also check against self-
	assignment. 

2005-07-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: fixed a bug that prevented detection of nonstandard 
	CBLAS and LAPACK libraries ($FLIBS has not been used where neccessary)

2005-07-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: changed version number to `3.9.0'
	* doc/Makefile.am: added dependencies for `html/index.html' rule
	* All instances of `"itpp/h_file.h"' replaced with `<itpp/h_file.h>'
	* Added `using namespace itpp;' to the tutorial source files

2005-07-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/pulse_shape_test.{cpp,ref}: fixed different floating-point
	numbers' precision in `cout' output problem by using `setprecision()'
	manipulator
	
	* tests/Makefile.am: Cygwin's `.exe' extension problem in test programs'
	filenames 
	* TODO updated

2005-07-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL: part of the doc/local/installation.doc modified file inserted