@@ -1,6 +1,6 @@
 SUBDIRS = images tutorial local
 
-docdir = $(datadir)/doc/@PACKAGE@-@VERSION@
+docdir = @docdir@
 
 all-local: html-local
 
@@ -8,11 +8,12 @@ html-local: html/index.html
 
 html/index.html: doxygen_html.cfg \
 	$(doc_local_sources) $(doc_tutorial_sources) \
-	$(h_sources) $(h_base_sources) $(h_comm_sources) $(h_fixedpoint_sources) \
-	$(h_graphics_sources) $(h_protocol_sources) $(h_srccode_sources) \
+	$(h_sources) $(h_base_sources) $(h_comm_sources) \
+	$(h_fixedpoint_sources) $(h_graphics_sources) \
+	$(h_protocol_sources) $(h_srccode_sources) \
 	$(cpp_base_sources) $(cpp_comm_sources) $(cpp_fixedpoint_sources) \
-	$(cpp_graphics_sources) $(cpp_protocol_sources) $(cpp_srccode_sources) \
-	$(cpp_tutorial_sources)
+	$(cpp_graphics_sources) $(cpp_protocol_sources) \
+	$(cpp_srccode_sources) $(cpp_tutorial_sources)
 	doxygen $<; \
 	if test -d html; then \
 		cp $(srcdir)/images/itpp_logga.jpg html; \
